feat: Updated configs

--- a/src/hypr/hyprland.conf
+++ b/src/hypr/hyprland.conf
@@ -1,7 +1,6 @@
 # downloaded for hyprland:
 # hyprland https://wiki.hyprland.org/hyprland-wiki/
-# hyprpaper uninstalling
-# swaybg
+# hyprpaper
 # kitty
 # waybar uninstalling
 # eww-wayland https://elkowar.github.io/eww/configuration.html
@@ -46,10 +45,11 @@ $su_notifs = /usr/bin/dunst -conf ~/.config/dunst/dunstrc/dunstrc
 $battery_script = /home/penguin/.config/hypr/battery_notification.sh
 $su_eww = /home/penguin/.config/eww/eww/target/release/eww daemon
 $su_bar = /home/penguin/.config/eww/eww/target/release/eww open status-bar
+$su_waybar = waybar
 $app_fix = /home/penguin/.config/hypr/app_startup_fix.sh
 
-
-exec-once = $dbus_env & $key_rng & $su_auth & $su_cursor & $gnome_buttons & $su_bg & $su_nobuzz & $su_notifs & $battery_script & $su_eww & $su_bar & $app_fix
+# & $su_eww & $su_bar
+exec-once = $dbus_env & $key_rng & $su_auth & $su_cursor & $gnome_buttons & $su_bg & $su_nobuzz & $su_notifs & $battery_script & $su_waybar & $app_fix
 
 
 # Emergency keybinds in main conf file
@@ -104,6 +104,13 @@ binds {
     # allow_workspace_cycles = true
 }
 
+# Window name regex vars
+$win_float = (kitty)|(qalculate)|(blueberry.py)|(nm-connection-editor)|(pavucontrol)|(org.gnome.clocks)|(gnome-system-monitor)|(org.kde.polkit-kde-authentication-agent-1)$
+$win_opacity = (kitty)|(qalculate)|(blueberry.py)|(nm-connection-editor)|(pavucontrol)|(org.gnome.clocks)|(gnome-system-monitor)$
+$win_center_cursor = (kitty)|(qalculate)|(org.kde.polkit-kde-authentication-agent-1)$
+$win_big = (blueberry.py)|(nm-connection-editor)|(pavucontrol)|(gnome-system-monitor)$
+$win_medium = (kitty)|(qalculate)|(org.gnome.clocks)$
+$win_small = (org.kde.polkit-kde-authentication-agent-1)$
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
@@ -124,27 +131,27 @@ general {
     
     no_border_on_floating = false
 
+
     # Authenticator rules
-    windowrule = float,^(org.kde.polkit-kde-authentication-agent-1)$
-    windowrule = move cursor -50% -50%,^(org.kde.polkit-kde-authentication-agent-1)$
-    windowrule = rounding 10,^(org.kde.polkit-kde-authentication-agent-1)$
-    windowrule = size 500 300,^(org.kde.polkit-kde-authentication-agent-1)$
     windowrule = dimaround,^(org.kde.polkit-kde-authentication-agent-1)$
     windowrule = stayfocused,^(org.kde.polkit-kde-authentication-agent-1)$
 
-    # Kitty Window rules
-    windowrule = float,^(kitty)$
-    windowrule = move cursor -50% -50%,^(kitty)$ # moves kitty to the center of the cursor
-    windowrule = opacity 1.0 override 0.4 override,^(kitty)$ # set opacity to 1.0 active and 0.5 inactive for kitty
-    windowrule = rounding 10,^(kitty)$ # set rounding to 10 for kitty
-    windowrule = size 800 500,^(kitty)$ # set rounding to 10 for kitty
+    windowrule = float,$win_float
+    windowrule = rounding 10,$win_float
 
-    # Calculator Window rules
-    windowrule = float,^(qalculate-gtk)$
-    windowrule = move cursor -50% -50%,^(qalculate-gtk)$ # moves kitty to the center of the cursor
-    windowrule = opacity 1.0 override 0.4 override,^(qalculate-gtk)$ # set opacity to 1.0 active and 0.5 inactive for kitty
-    windowrule = rounding 10,^(qalculate-gtk)$ # set rounding to 10 for kitty
-    windowrule = size 800 500,^(qalculate-gtk)$ # set rounding to 10 for kitty
+    # Keep to fractions of screen (1920/sa by 1200/sa, where s is scale (0.75), a is fraction of linear screen)
+    windowrule = size 1280 800,$win_big # 1/2
+    windowrule = size 853 533,$win_medium # ~1/3
+    windowrule = size 512 320,$win_small # 1/5
+
+    # Center cusor but keep full window onscreen
+    windowrule = move onscreen cursor -50% -50%,$win_center_cursor
+
+    # Opacity full when focused, less when unfocused
+    windowrule = opacity 1.0 override 0.4 override,$win_opacity
+
+    workspace = special:scratchpad, gapsin:0, gapsout:0
+    workspace = special:notes, gapsin:0, gapsout:0
 }
 
 decoration {
