--- a/src/hypr/keybinds/keybindingsApps.conf
+++ b/src/hypr/keybinds/keybindingsApps.conf
@@ -11,7 +11,7 @@ bind = $mainMod, R, exec, wofi -i --show drun # runner
 # bind = $mainMod, U, exec, nemo /home/penguin/Documents/Math122
 # bind = $mainMod, I, exec, nemo /home/penguin/Documents/Math101
 # bind = $mainMod, O, exec, nemo /home/penguin/Documents/ATWP
-bind = $mainMod, P, exec, ~/CustomScripts/OpenCodeStuff.sh
+# bind = $mainMod, P, exec, ~/CustomScripts/OpenCodeStuff.sh
 
 # homerow left
 bind = $mainMod, A, exec, code
