feat: Add hyprland config for placeholder2

--- a/src/hypr/keybinds/keybindingsApps.conf
+++ b/src/hypr/keybinds/keybindingsApps.conf
@@ -11,13 +11,15 @@ bind = $mainMod, R, exec, wofi -i --show drun # runner
 # bind = $mainMod, U, exec, nemo /home/penguin/Documents/Math122
 # bind = $mainMod, I, exec, nemo /home/penguin/Documents/Math101
 # bind = $mainMod, O, exec, nemo /home/penguin/Documents/ATWP
-# bind = $mainMod, P, exec, ~/CustomScripts/OpenCodeStuff.sh
+bind = $mainMod, P, exec, ~/CustomScripts/OpenCodeStuff.sh
 
 # homerow left
 bind = $mainMod, A, exec, code
 bind = $mainMod, S, exec, gedit
 bind = $mainMod, D, exec, qalculate-gtk
 # bind = $mainMod, F, exec, 
+
+bind = ,xf86calculater, exec, qalculate-gtk
 
 # Firefox bookmarks, homerow right
 # bind = $mainMod, G, exec, firefox login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313
