--- a/src/hypr/keybinds/keybindingsSystem.conf
+++ b/src/hypr/keybinds/keybindingsSystem.conf
@@ -17,20 +17,22 @@ bindl = $secondary $tertiary, $bright_up  , exec, $notif_script_path b 100%
 bindl = $secondary $tertiary, $bright_down, exec, $notif_script_path b 0%
 
 # Audio
-bindl =                     , $sound_up  , exec, $notif_script_path v 5%+
-bindl =                     , $sound_down, exec, $notif_script_path v 5%-
+bindl =                     , $sound_up  , exec, $notif_script_path v +5%
+bindl =                     , $sound_down, exec, $notif_script_path v -5%
 
-bindl = $secondary          , $sound_up  , exec, $notif_script_path v 1%+
-bindl = $secondary          , $sound_down, exec, $notif_script_path v 1%-
+bindl = $secondary          , $sound_up  , exec, $notif_script_path v +1%
+bindl = $secondary          , $sound_down, exec, $notif_script_path v -1%
 
-bindl =            $tertiary, $sound_up  , exec, $notif_script_path v 20%+
-bindl =            $tertiary, $sound_down, exec, $notif_script_path v 20%-
+bindl =            $tertiary, $sound_up  , exec, $notif_script_path v +20%
+bindl =            $tertiary, $sound_down, exec, $notif_script_path v -20%
 
-bindl = $secondary $tertiary, $sound_up  , exec, $notif_script_path v 100%
-bindl = $secondary $tertiary, $sound_down, exec, $notif_script_path v 0%
+bindl = $secondary $tertiary, $sound_up  , exec, $notif_script_path v  100%
+bindl = $secondary $tertiary, $sound_down, exec, $notif_script_path v  0%
 
 bind = , $sound_mute, exec, $notif_script_path mute
 
 bind = , $sound_play, exec, playerctl play-pause
 
 bind = , $prt_sc, exec, grim -g "$(slurp)"
+
+bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
