--- a/src/hypr/keybinds/keybindingsWindow.conf
+++ b/src/hypr/keybinds/keybindingsWindow.conf
@@ -25,22 +25,54 @@ bind = $mainMod $secondary, 8, movetoworkspace, 8
 bind = $mainMod $secondary, 9, movetoworkspace, 9
 bind = $mainMod $secondary, 0, movetoworkspace, 10
 
-# Move into special
-bind = $mainMod $secondary, S, movetoworkspace, special:scratchpad
-bind = $mainMod $secondary, N, movetoworkspace, special:notes
-
 # Move active window to adjacent workspace
 bind = $mainMod $secondary $tertiary, RIGHT, movetoworkspace, +1
 bind = $mainMod $secondary $tertiary, LEFT , movetoworkspace, -1
-bind = $mainMod $secondary $tertiary, UP, movetoworkspace, -4
-bind = $mainMod $secondary $tertiary, DOWN , movetoworkspace, +4
 
-bind = $mainMod $secondary, P, pin,
+
+	# bind = $mainMod $secondary, R, submap, resize
+
+	# # will start a submap called "resize"
+	# submap = resize
+
+	# # Just in case
+	# bind = SUPER, Q, exec, kitty
+
+	# # sets repeatable binds for resizing the active window
+	# binde = , RIGHT, resizeactive, +10 +0
+	# binde = , LEFT , resizeactive, -10 +0
+	# binde = , DOWN , resizeactive, +0  +10
+	# binde = , UP   , resizeactive, +0  -10
+
+    # bind = , 1, splitratio, exact 0.2
+    # bind = , 2, splitratio, exact 0.4
+    # bind = , 3, splitratio, exact 0.6
+    # bind = , 4, splitratio, exact 0.8
+    # bind = , 5, splitratio, exact 1.0
+    # bind = , 6, splitratio, exact 1.2
+    # bind = , 7, splitratio, exact 1.4
+    # bind = , 8, splitratio, exact 1.6
+    # bind = , 9, splitratio, exact 1.8
+	
+    # bind = , minus, splitratio, -0.05
+    # bind = , equal, splitratio, +0.05
+
+	# # use reset to go back to the global submap
+	# bind = , R     , submap, reset
+	# bind = , escape, submap, reset
+	# bind = $mainMod, R     , submap, reset
+	# bind = $mainMod, escape, submap, reset
+	# bind = $mainMod $secondary, R, submap, reset
+
+	# # will reset the submap, meaning end the current one and return to the global one
+	# submap = reset
+
+
+bind = $mainMod $secondary, P, pseudo,      # dwindle
+bind = $mainMod $secondary, J, togglesplit, # dwindle
 bind = $mainMod $secondary, F, fullscreen,
 bind = $mainMod $secondary, D, fakefullscreen,
 
-bind = $mainMod $secondary, O, toggleopaque,
-bind = $mainMod $secondary, J, togglesplit,
 bind = $mainMod $secondary, V, togglefloating,
 
 # Move/resize windows with mainMod + (ALT) + LMB and dragging
@@ -48,6 +80,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod $tertiary, mouse:272, resizewindow
 
 # bind = ALT     , f4, killactive, # emergency
+bind = $mainMod, C , killactive,
 
 # Groups
 bind = $mainMod $secondary, G           , togglegroup
