--- a/src/hypr/keybinds/keybindingsWorkspace.conf
+++ b/src/hypr/keybinds/keybindingsWorkspace.conf
@@ -16,10 +16,7 @@ bind = $mainMod, 0, workspace, 10
 # Switch to adjacent workspace
 bind = $mainMod $tertiary, RIGHT, workspace, +1
 bind = $mainMod $tertiary, LEFT , workspace, -1
-# 2D workspace motion
-bind = $mainMod $tertiary, UP, workspace, -4
-bind = $mainMod $tertiary, DOWN , workspace, +4
 
-# Special workspace
-bind = $mainMod $tertiary, S, togglespecialworkspace, scratchpad
-bind = $mainMod $tertiary, N, togglespecialworkspace, notes
+# Scroll through existing workspaces with mainMod + scroll
+bind = $mainMod, mouse_down, workspace, +1
+bind = $mainMod, mouse_up  , workspace, -1
