feat: Add background

--- a/src/hypr/hyprland.conf
+++ b/src/hypr/hyprland.conf
@@ -28,10 +28,10 @@
 # grim
 # slurp
 # wine wine-gecko wine-mono lib32-pipewire pipewire-pulse lib32-libpulse proton lutris winetricks steam
-
-# To add in future:
 # hyprlock
 # hypridle
+
+# To add in future:
 # wluma
 # wgammarelay
 
@@ -57,11 +57,13 @@ $key_rng = gnome-keyring-daemon --start --components=secrets
 $su_auth = /usr/lib/polkit-kde-authentication-agent-1
 $su_clip_txt = wl-paste --type text --watch cliphist store
 $su_clip_img = wl-paste --type image --watch cliphist store
+$start_hypridle = hypridle
+$start_wluma = wluma
 
 # Themeing
 $su_cursor = hyprctl setcursor Bibata-Modern-Classic 10
 $gnome_buttons = gsettings set org.gnome.desktop.wm.preferences button-layout :
-$su_bg = hyprpaper -c /home/penguin/.config/hypr/hyprpaper.conf
+$su_bg = hyprpaper -c /home/penguin/Documents/Config/Dotfiles/src/hypr/hyprpaper.conf
 
 # Hardware
 $su_nobuzz = pactl unload-module module-suspend-on-idle
@@ -72,7 +74,7 @@ $battery_script = /home/penguin/.config/hypr/battery_notification.sh
 $su_waybar = waybar
 $app_fix = /home/penguin/.config/hypr/app_startup_fix.sh
 
-exec-once = $dbus_env & $key_rng & $su_auth & $su_clip_txt & $su_clip_img
+exec-once = $dbus_env & $key_rng & $su_auth & $su_clip_txt & $su_clip_img & $start_hypridle & $start_wluma
 exec-once = $su_cursor & $gnome_buttons & $su_bg
 exec-once = $su_nobuzz
 exec-once = $su_notifs & $battery_script & $su_waybar & $app_fix
