--- a/src/hypr/keybinds/keybindingsSystem.conf
+++ b/src/hypr/keybinds/keybindingsSystem.conf
@@ -30,6 +30,7 @@ bindl = $secondary $tertiary, $sound_up  , exec, $notif_script_path v  100%
 bindl = $secondary $tertiary, $sound_down, exec, $notif_script_path v  0%
 
 bind = , $sound_mute, exec, $notif_script_path mute
+bind = , $mic_mute, exec, $notif_script_path mute
 
 bind = , $sound_play, exec, playerctl play-pause
 
