feat: hyprlock and hypridle config

--- a/src/hypr/hyprland.conf
+++ b/src/hypr/hyprland.conf
@@ -58,7 +58,7 @@ $su_auth = /usr/lib/polkit-kde-authentication-agent-1
 $su_clip_txt = wl-paste --type text --watch cliphist store
 $su_clip_img = wl-paste --type image --watch cliphist store
 $start_hypridle = hypridle
-$start_wluma = wluma
+# $start_wluma = wluma
 
 # Themeing
 $su_cursor = hyprctl setcursor Bibata-Modern-Classic 10
@@ -74,7 +74,7 @@ $battery_script = /home/penguin/.config/hypr/battery_notification.sh
 $su_waybar = waybar
 $app_fix = /home/penguin/.config/hypr/app_startup_fix.sh
 
-exec-once = $dbus_env & $key_rng & $su_auth & $su_clip_txt & $su_clip_img & $start_hypridle & $start_wluma
+exec-once = $dbus_env & $key_rng & $su_auth & $su_clip_txt & $su_clip_img & $start_hypridle #& $start_wluma
 exec-once = $su_cursor & $gnome_buttons & $su_bg
 exec-once = $su_nobuzz
 exec-once = $su_notifs & $battery_script & $su_waybar & $app_fix
