--- a/src/hypr/keybinds/keybindingsApps.conf
+++ b/src/hypr/keybinds/keybindingsApps.conf
@@ -11,19 +11,18 @@ bind = $mainMod, R, exec, wofi -i --show drun # runner
 # bind = $mainMod, U, exec, nemo /home/penguin/Documents/Math122
 # bind = $mainMod, I, exec, nemo /home/penguin/Documents/Math101
 # bind = $mainMod, O, exec, nemo /home/penguin/Documents/ATWP
-bind = $mainMod, P, exec, ~/CustomScripts/OpenCodeStuff.sh
+# bind = $mainMod, P, exec, ~/CustomScripts/OpenCodeStuff.sh
 
 # homerow left
 bind = $mainMod, A, exec, code
-bind = $mainMod, S, exec, gedit
+bind = $mainMod, S, exec, firefox
 bind = $mainMod, D, exec, qalculate-gtk
 # bind = $mainMod, F, exec, 
 
-bind = ,xf86calculater, exec, qalculate-gtk
 
 # Firefox bookmarks, homerow right
 # bind = $mainMod, G, exec, firefox login.pearson.com/v1/piapi/piui/signin?client_id=dN4bOBG0sGO9c9HADrifwQeqma5vjREy&okurl=https:%2F%2Fportal.mypearson.com%2Fcourse-home&siteid=8313
 # bind = $mainMod, H, exec, firefox bright.uvic.ca/d2l/home
 # bind = $mainMod, j, exec, firefox en.wikipedia.org/wiki/Main_Page
 # bind = $mainMod, K, exec, firefox desmos.com/calculator
-bind = $mainMod, L, exec, firefox
+# bind = $mainMod, L, exec, firefox
